overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body, html{
   width: 100%;
   height: 100vh;
   overflow-x: hidden;
+  overflow-y: hidden;
   background-position:center;
   background-size:cover;
   background-repeat:no-repeat;
@@ -333,4 +334,24 @@ body, html{
     background: #fff;
     color: #333;
     border: #ccc solid 1px;
+}
+
+/*Profile */
+
+.profile{
+  width: 80%;
+  left: 10%;
+  height: 100vh;
+  overflow-x: hidden;
+}
+
+.personal{
+
+}
+
+.info{
+
+}
+.btns{
+
 }
